--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
 
             <div class="home-img">
-                <img src="img/home.png">
+                <img src="images/home.png">
             </div>
         </section>
 
