--- a/About Me.html
+++ b/About Me.html
@@ -48,7 +48,7 @@
                         </div>
                     </div>
                     <div class="image-section">
-                        <img src="img/about.jpg">
+                        <img src="images/about.jpg">
                     </div>
                 </div>
              </div>
