--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,55 +1,33 @@
-<!doctype html>
-<html lang="en">
-
+ <!DOCTYPE html>
+ <html>
     <head>
-    <!-- Required meta tags -->
-    <meta charset="u;-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
-rel="stylesheet" integrity="sha384- +0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"crossorigin="anonymous">
-    <link href="custom-starter.css" rel="stylesheet" >
-    
-  
+        <meta charset="utf-8">
+        <meta name="viewport" content = "width=device-width,initial-scale=1">
+        <title>My Portfolio</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
 
-    <title>Doguis Design</title>
+        <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2? family=Rubik:wght@300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
     </head>
-
     <body>
-        <header class="navvy">
-        <div class="container px-0">
-            <nav class="navbar navbar-expand-lg navbar-light">
-                <div class="container">
-                    <a class="navbar-brand" href="index.html">
-                        <img src="images/DOGUIS.png" width="225" height="90" alt="logo for DOGUIS design">
-                        <span class="d-none">DOGUIS</span>
-                    </a>
-                    <button class="navbar-toggler" type="button" 
-                    data-bs-toggle="collapse" 
-                    data-bs-target="#navbarNav" 
-                    aria-controls="navbarNav" 
-                    aria-expanded="false" 
-                    aria-label="Toggle Navigation">
-                    <i class="bi bi-list"></i>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav ms-auto text-center">
-                            <li class="nav-item">
-                                <a href="About Me.html" class="nav-link">About Me</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="Portfolio.html" class="nav-link">Portfolio</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="Contact Me.html" class="nav-link">Contact</a>
-                            </li>
-                        </ul>  
-                    </div>
-                </div>
-            </nav>
-        </div>
-    </header>
+        <header>
+            <a href="#" class="logo"><span>D</span>oguis</a>
+
+            <ul class="navbar">
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="About Me.html">About Me</a></li>
+                <li><a href="Portfolio.html">Portfolio</a></li>
+                <li><a href="Contact Me.html">Contact me</a></li>
+            </ul>
+            <div class="menu-btn">
+                <span>INTRO</span>
+                <div class="bx bx-menu" id="menu-icon"></div>
+            </div>
+        </header>
     <main style="padding-top: 10px;">
         <div class="container my-2 py-md-3">
             <h1 style="padding-top: 50px;"> My Porfolio </h1>
