--- a/Portfolio.html
+++ b/Portfolio.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content = "width=device-width,initial-scale=1">
         <title>My Portfolio</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="custom-starter.css">
 
         <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 
