--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,72 +1,72 @@
- <!DOCTYPE html>
- <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content = "width=device-width,initial-scale=1">
-        <title>My Portfolio</title>
-        <link rel="stylesheet" type="text/css" href="custom-starter.css">
+<!DOCTYPE html>
+<html>
+   <head>
+       <meta charset="utf-8">
+       <meta name="viewport" content = "width=device-width,initial-scale=1">
+       <title>My Portfolio</title>
+       <link rel="stylesheet" type="text/css" href="style.css">
 
-        <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+       <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2? family=Rubik:wght@300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
-    </head>
-    <body>
-        <header>
-            <a href="#" class="logo"><span>D</span>oguis</a>
+       <link rel="preconnect" href="https://fonts.googleapis.com">
+       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+       <link href="https://fonts.googleapis.com/css2? family=Rubik:wght@300;400;500;600;700;800;900&display=swap"
+       rel="stylesheet">
+   </head>
+   <body>
+       <header>
+           <a href="#" class="logo"><span>D</span>oguis</a>
 
-            <ul class="navbar">
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="About Me.html">About Me</a></li>
-                <li><a href="Portfolio.html">Portfolio</a></li>
-                <li><a href="Contact Me.html">Contact me</a></li>
-            </ul>
-            <div class="menu-btn">
-                <span>INTRO</span>
-                <div class="bx bx-menu" id="menu-icon"></div>
+           <ul class="navbar">
+               <li><a href="index.html" class="active">Home</a></li>
+               <li><a href="About Me.html">About Me</a></li>
+               <li><a href="Portfolio.html">Portfolio</a></li>
+               <li><a href="Contact Me.html">Contact me</a></li>
+           </ul>
+           <div class="menu-btn">
+               <span>INTRO</span>
+               <div class="bx bx-menu" id="menu-icon"></div>
+           </div>
+       </header>
+<main style="padding-top: 10px;">
+    <div class="container my-2 py-md-3">
+        <h1 style="padding-top: 50px;"> My Porfolio </h1>
+        <div class="row mt-1 g-5 g-md-3">
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="card">
+                     <img src="images/Analog.png">
+                     <div class="card-body">
+                         <h2 class="card-title">Analog</h2>
+                        <p class="card-text">The piano is a versatile musical instrument that is played by pressing keys on a keyboard.</p>
+                      <a href="https://joren7.github.io/WS02-ANALOG/" class="btn btn-outline-dark">Lets View!</a>
+                    </div>
+                </div>
             </div>
-        </header>
-    <main style="padding-top: 10px;">
-        <div class="container my-2 py-md-3">
-            <h1 style="padding-top: 50px;"> My Porfolio </h1>
-            <div class="row mt-1 g-5 g-md-3">
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="card">
-                         <img src="images/Analog.png">
-                         <div class="card-body">
-                             <h2 class="card-title">Analog</h2>
-                            <p class="card-text">The piano is a versatile musical instrument that is played by pressing keys on a keyboard.</p>
-                          <a href="https://joren7.github.io/WS02-ANALOG/" class="btn btn-outline-dark">Lets View!</a>
-                        </div>
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="card">
+                     <img src="images/Poetry Workshop.png">
+                     <div class="card-body">
+                         <h2 class="card-title">Poetry Workshop</h2>
+                        <p class="card-text">These workshops can cover various aspects of poetry, such as sentence structure, style, and themes.</p>
+                      <a href="https://joren7.github.io/WS02-TABLE-FORM/" class="btn btn-outline-dark">Lets View!</a>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="card">
-                         <img src="images/Poetry Workshop.png">
-                         <div class="card-body">
-                             <h2 class="card-title">Poetry Workshop</h2>
-                            <p class="card-text">These workshops can cover various aspects of poetry, such as sentence structure, style, and themes.</p>
-                          <a href="https://joren7.github.io/WS02-TABLE-FORM/" class="btn btn-outline-dark">Lets View!</a>
-                        </div>
-                    </div>
-                </div>
-    
-                <div class="col-12 col-md-6 col-lg-4">
-                      <div class="card">
-                         <img src="images/Clever Jerry.png">
-                         <div class="card-body">
-                             <h2 class="card-title">Clever Jerry</h2>
-                            <p class="card-text">Jerry Clever, a character from the iconic cartoon series Tom and Jerry, is known for his quick thinking and clever tactics.</p>
-                          <a href="https://joren7.github.io/WS02_MIDTERM1/" class="btn btn-outline-dark">Learn More!</a>
-                         </div>
-                    </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-lg-4">
+                  <div class="card">
+                     <img src="images/Clever Jerry.png">
+                     <div class="card-body">
+                         <h2 class="card-title">Clever Jerry</h2>
+                        <p class="card-text">Jerry Clever, a character from the iconic cartoon series Tom and Jerry, is known for his quick thinking and clever tactics.</p>
+                      <a href="https://joren7.github.io/WS02_MIDTERM1/" class="btn btn-outline-dark">Learn More!</a>
+                     </div>
                 </div>
             </div>
         </div>
-    </main>
-         <div class="share">
+    </div>
+</main>
+        <div class="share">
             <p>Check out my:</p>
             <div class="social">
                 <a href="https://twitter.com" class="me-3">
@@ -81,3 +81,4 @@
         <script src="js/script.js"></script>
     </body>
  </html>
+        
