--- a/Portfolio.html
+++ b/Portfolio.html
@@ -22,7 +22,7 @@ rel="stylesheet" integrity="sha384- +0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDb
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container">
                     <a class="navbar-brand" href="index.html">
-                        <img src="images/DOGUIS.png" width="225" height="90" alt="logo for DOGUIS">
+                        <img src="images/DOGUIS.png" width="225" height="90" alt="logo for DOGUIS design">
                         <span class="d-none">DOGUIS</span>
                     </a>
                     <button class="navbar-toggler" type="button" 
